Updated project order

--- a/wk03content.html
+++ b/wk03content.html
@@ -11,34 +11,6 @@
  	<li>Budget Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>.</li>
     <li>Here is a suggestion when forming your groups for 2019-2020 based on the information I have received so far:
 	<li>2019-2020 Projects:
-	 <ol>ABC
-		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Meddy">Abdirashid</a>, 
-				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur</a>, Deval</li>
-		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
-				   <a href="https://github.com/Trung28899/SensoDrive">Trung</a>, Haider</li>
-	 </ol>
-	 <ol>ABB
-		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
-				   <a href="https://github.com/">Sam</a>, 
-				   <a href="https://github.com/">Boswell</a></li>
-	 </ol>
-	 <ol>BBC
-		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed</a>, 
-				   <a href="https://github.com/rickyramnath97/gps">Ricky</a>, Padda - RC522 RFID</li>
-	 </ol>
-	 <ol>AAC		   
-		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
-				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan - LCD</li>
-	 </ol>
-	 <ol>ACC
-		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel W - Pressure</li>
-	 </ol>
-	 <ol>AABB
-		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
-				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
-				   <a href="https://github.com/">Thomas (need link) - ADXL335</a>, 
-				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
-	 </ol>
 	 <ol>AAA
 		<li>Solar Gazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad</a>, 
 				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin</a>, 
@@ -47,9 +19,29 @@
 	 <ol>AAC
 		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris</a>, 
 				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas - Servo</li>
+		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
+				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan - LCD</li>
 	 </ol>
 	 <ol>ACC
 		<li>Tennis: <a href="https://github.com/">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
+		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel W - Pressure</li>
+	 </ol>
+	 <ol>ABC
+		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Meddy">Abdirashid</a>, 
+				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur</a>, Deval</li>
+		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
+				   <a href="https://github.com/Trung28899/SensoDrive">Trung</a>, Haider</li>
+	 </ol>
+	 <ol>AABB
+		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
+				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
+				   <a href="https://github.com/">Thomas (need link) - ADXL335</a>, 
+				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
+	 </ol>
+	 <ol>ABB
+		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
+				   <a href="https://github.com/">Sam</a>, 
+				   <a href="https://github.com/">Boswell</a></li>
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
@@ -61,21 +53,13 @@
 	 <ol>B_
 		<li>Smart House Control: <a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, Slava</li>
 	 </ol>
-	 <ol>BBB
-		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L</a>, 
-				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature</a>, 
-				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
-	 </ol>
-	 <ol>BB?
-		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Pressure</a>, 
-				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan</a>,
-				   Aiden?</li>
-				   
-	 </ol>
 	 <ol>B
 		<li><a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a></li>
 	 </ol>
 	 <ol>BBB
+		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L</a>, 
+				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature</a>, 
+				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
 		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran</a>, 
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle</a></li>
@@ -87,6 +71,11 @@
 		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas</a>, 
 				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew</a>, 
 				   Luca - SHT31-D</li>
+		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Pressure</a>, 
+				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan</a>,
+				   Aiden - Temperature PT100</li>
+		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed</a>, 
+				   <a href="https://github.com/rickyramnath97/gps">Ricky</a>, Padda - RC522 RFID</li>
 	 </ol>
 	 <ol>BCC
 		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O</a>, 
@@ -94,7 +83,7 @@
 	 </ol>
 	 <ol>BC_
 		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W</a>, 
-				   AntonioAiden - Temperature PT100, Gabriel</li>
+				   Antonio, Gabriel</li>
 	 </ol>
 	 <ol>B__
 		<li>Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June Lwing PLC</a>, 
