--- a/wk03content.html
+++ b/wk03content.html
@@ -35,7 +35,7 @@
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
 				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
-				   <a href="https://github.com/">Thomas (need link) - ADXL335</a>, 
+				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL335</a>, 
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
 	 </ol>
 	 <ol>ABB
