--- a/wk03content.html
+++ b/wk03content.html
@@ -30,7 +30,7 @@
 		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Meddy">Abdirashid</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur</a>, Deval</li>
 		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
-				   <a href="https://github.com/Trung28899/SensoDrive">Trung</a>, Haider</li>
+				   <a href="https://github.com/Trung28899/SmartMirror">Trung</a>, Haider</li>
 	 </ol>
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
@@ -40,8 +40,8 @@
 	 </ol>
 	 <ol>ABB
 		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
-				   <a href="https://github.com/">Sam</a>, 
-				   <a href="https://github.com/">Boswell</a></li>
+				   <a href="https://github.com/samfat787/SmartDenProject">Sam</a>, 
+				   <a href="https://github.com/boskyle/SmartDen">Boswell</a></li>
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
@@ -50,11 +50,9 @@
 	 <ol>A
 		<li><a href="https://github.com/">Nam</a></li>
 	 </ol>
-	 <ol>B_
-		<li>Smart House Control: <a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, Slava</li>
-	 </ol>
-	 <ol>B
-		<li><a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a></li>
+	 <ol>BB_
+		<li>Smart House Control: <a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, 
+				   <a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L</a>, 
