Updated sensor/effector choices

--- a/wk03content.html
+++ b/wk03content.html
@@ -55,32 +55,32 @@
 				   <a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
-		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L</a>, 
+		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
 				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature</a>, 
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
 		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran</a>, 
-				   <a href="https://github.com/gseridon/LumiMonitor">Gino</a>, 
+				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle</a></li>
-		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina</a>, 
+		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
 				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran</a>, 
 				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen</a></li>
 	 </ol>
 	 <ol>BBC
-		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas</a>, 
-				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew</a>, 
+		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas - MQ-2 Gas</a>, 
+				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR</a>, 
 				   Luca - SHT31-D</li>
 		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Pressure</a>, 
 				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan</a>,
-				   Aiden - Temperature PT100</li>
-		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed</a>, 
-				   <a href="https://github.com/rickyramnath97/gps">Ricky</a>, Padda - RC522 RFID</li>
+				   Aiden - PT100 Temperature</li>
+		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad</a>, 
+				   <a href="https://github.com/rickyramnath97/gps">Ricky - MTK3339 GPS</a>, Padda - RC522 RFID</li>
 	 </ol>
 	 <ol>BCC
 		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O</a>, 
 				   Vikas VCNL4010 Proximity, George - IR Beam</li>
 	 </ol>
 	 <ol>BC_
-		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W</a>, 
+		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W - CJMCU-231 Pedometer</a>, 
 				   Antonio, Gabriel</li>
 	 </ol>
 	 <ol>B__
