Updated project list

--- a/wk03content.html
+++ b/wk03content.html
@@ -38,21 +38,19 @@
 				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL335</a>, 
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
 	 </ol>
+	 <ol>AB
+		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
+				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - luminosity</a></li>
+	 </ol>
 	 <ol>ABB
 		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
 				   <a href="https://github.com/samfat787/SmartDenProject">Sam</a>, 
 				   <a href="https://github.com/boskyle/SmartDen">Boswell</a></li>
 	 </ol>
-	 <ol>AB
-		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
-				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - luminosity</a></li>
-	 </ol>
-	 <ol>A
-		<li><a href="https://github.com/">Nam</a></li>
-	 </ol>
-	 <ol>BB_
-		<li>Smart House Control: <a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, 
-				   <a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
+	 <ol>ABB_
+		<li>Smart House Control: <a href="https://github.com/namnguyen20999/InClassPro1">Nam</a>,
+					<a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, 
+					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
