Part numbers added

--- a/wk03content.html
+++ b/wk03content.html
@@ -17,30 +17,30 @@
 				   <a href="https://github.com/TheSweeterMan/TBD">Matthew</a></li>
 	 </ol>
 	 <ol>AAC
-		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris</a>, 
+		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver</a>, 
 				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas - Servo</li>
 		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
 				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan - LCD</li>
 	 </ol>
 	 <ol>ACC
-		<li>Tennis: <a href="https://github.com/">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
+		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
 		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel W - Pressure</li>
 	 </ol>
 	 <ol>ABC
 		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid</a>, 
-				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur</a>, Deval</li>
+				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid</a>, Deval</li>
 		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
 				   <a href="https://github.com/Trung28899/SmartMirror">Trung</a>, Haider</li>
 	 </ol>
 	 <ol>AABB
-		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh</a>, 
+		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP007 IR</a>, 
 				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
 				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL335</a>, 
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
-				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - luminosity</a></li>
+				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux</a></li>
 	 </ol>
 	 <ol>ABB
 		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
@@ -54,9 +54,9 @@
 	 </ol>
 	 <ol>BBB
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
-				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature</a>, 
+				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse</a>, 
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
-		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran</a>, 
+		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - VCNL 4010 Proximity</a>, 
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle</a></li>
 		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
@@ -68,7 +68,7 @@
 				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR</a>, 
 				   Luca - SHT31-D</li>
 		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Pressure</a>, 
-				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan</a>,
+				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas</a>,
 				   Aiden - PT100 Temperature</li>
 		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad</a>, 
 				   <a href="https://github.com/rickyramnath97/gps">Ricky - MTK3339 GPS</a>, Padda - RC522 RFID</li>
