Updated Part Numbers

--- a/wk03content.html
+++ b/wk03content.html
@@ -24,16 +24,16 @@
 	 </ol>
 	 <ol>ACC
 		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
-		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang</a>, Hyoje - Weight, Daniel W - Pressure</li>
+		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
 	 </ol>
 	 <ol>ABC
 		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid</a>, Deval</li>
-		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh</a>, 
+		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Voice Recorder Module</a>, 
 				   <a href="https://github.com/Trung28899/SmartMirror">Trung</a>, Haider</li>
 	 </ol>
 	 <ol>AABB
-		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP007 IR</a>, 
+		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP006 IR</a>, 
 				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
 				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL335</a>, 
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
@@ -43,12 +43,12 @@
 				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux</a></li>
 	 </ol>
 	 <ol>ABB
-		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby</a>, 
+		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge</a>, 
 				   <a href="https://github.com/samfat787/SmartDenProject">Sam</a>, 
 				   <a href="https://github.com/boskyle/SmartDen">Boswell</a></li>
 	 </ol>
 	 <ol>ABB_
-		<li>Smart House Control: <a href="https://github.com/namnguyen20999/InClassPro1">Nam</a>,
+		<li>Smart House Control: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
 					<a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, 
 					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
 	 </ol>
