Part numbers added

--- a/wk03content.html
+++ b/wk03content.html
@@ -12,24 +12,24 @@
     <li>Here is a suggestion when forming your groups for 2019-2020 based on the information I have received so far:
 	<li>2019-2020 Projects:
 	 <ol>AAA
-		<li>Solar Gazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad</a>, 
-				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin</a>, 
-				   <a href="https://github.com/TheSweeterMan/TBD">Matthew</a></li>
+		<li>Solar Gazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad - ACS 712 Current</a>, 
+				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin - ZMPT101B Voltage</a>, 
+				   <a href="https://github.com/TheSweeterMan/TBD">Matthew - LM35 Temperature</a></li>
 	 </ol>
 	 <ol>AAC
 		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver</a>, 
 				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas - Servo</li>
-		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert</a>, 
-				   <a href="https://github.com/asperham/Parts-Crib">Colin</a>, Jonathan - LCD</li>
+		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID</a>, 
+				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (Platform?)</a>, Jonathan - LCD</li>
 	 </ol>
 	 <ol>ACC
 		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
 		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
 	 </ol>
 	 <ol>ABC
-		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid</a>, 
+		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid</a>, Deval</li>
-		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Voice Recorder Module</a>, 
+		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
 				   <a href="https://github.com/Trung28899/SmartMirror">Trung</a>, Haider</li>
 	 </ol>
 	 <ol>AABB
@@ -39,7 +39,7 @@
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
 	 </ol>
 	 <ol>AB
-		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan</a>, 
+		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
 				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux</a></li>
 	 </ol>
 	 <ol>ABB
@@ -56,7 +56,7 @@
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
 				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse</a>, 
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
-		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - VCNL 4010 Proximity</a>, 
+		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - VCNL 4010 Proximity (Platform?)</a>, 
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle</a></li>
 		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
