--- a/wk03content.html
+++ b/wk03content.html
@@ -20,10 +20,10 @@
 		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver</a>, 
 				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas - Servo</li>
 		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID</a>, 
-				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (Platform?)</a>, Jonathan - LCD</li>
+				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (stm32f103c8t6 and st-link v2)</a>, Jonathan - LCD</li>
 	 </ol>
 	 <ol>ACC
-		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
+		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir - FSR01CE Force</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
 		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
 	 </ol>
 	 <ol>ABC
@@ -40,7 +40,7 @@
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
-				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux</a></li>
+				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29)</a></li>
 	 </ol>
 	 <ol>ABB
 		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge</a>, 
@@ -56,12 +56,12 @@
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
 				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse</a>, 
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
-		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - VCNL 4010 Proximity (Platform?)</a>, 
+		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - TSL2561 lux (0x49)</a>, 
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
-				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle</a></li>
+				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity</a></li>
 		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
-				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran</a>, 
-				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen</a></li>
+				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration</a>, 
+				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - HB100 Microwave</a></li>
 	 </ol>
 	 <ol>BBC
 		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas - MQ-2 Gas</a>, 
