--- a/wk03content.html
+++ b/wk03content.html
@@ -49,7 +49,7 @@
 	 </ol>
 	 <ol>ABB_
 		<li>Smart House Control: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
-					<a href="https://github.com/diepbaoquy97/SmartHome">Bao</a>, 
+					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - TMP35 Temp (stm32f103c8t6 and st-link v2)</a>, 
 					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
@@ -58,16 +58,16 @@
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
 		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - TSL2561 lux (0x49)</a>, 
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
-				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity</a></li>
+				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (platform?)</a></li>
 		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
-				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration</a>, 
+				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration (platform?)</a>, 
 				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - HB100 Microwave</a></li>
 	 </ol>
 	 <ol>BBC
 		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas - MQ-2 Gas</a>, 
-				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR</a>, 
+				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR (platform?)</a>, 
 				   Luca - SHT31-D</li>
-		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Pressure</a>, 
+		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Resistive Moisture</a>, 
 				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas</a>,
 				   Aiden - PT100 Temperature</li>
 		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad</a>, 
