--- a/wk03content.html
+++ b/wk03content.html
@@ -50,7 +50,7 @@
 	 <ol>ABB_
 		<li>Smart House Control: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
 					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - TMP35 Temp (stm32f103c8t6 and st-link v2)</a>, 
-					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian</a>, Slava</li>
+					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian - PT100 Temperature (stm32f103c8t6 and st-link v2)</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
