--- a/wk03content.html
+++ b/wk03content.html
@@ -18,7 +18,7 @@
 	 </ol>
 	 <ol>AAC
 		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver</a>, 
-				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil</a>, Nicolas - Servo</li>
+				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil Solenoid</a>, Nicolas - Servo</li>
 		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID</a>, 
 				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (stm32f103c8t6 and st-link v2)</a>, Jonathan - LCD</li>
 	 </ol>
@@ -34,9 +34,9 @@
 	 </ol>
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP006 IR</a>, 
-				   <a href="https://github.com/theoriginalwech/">Shawn</a>, 
+				   <a href="https://github.com/theoriginalwech/">Shawn - RTC?</a>, 
 				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL335</a>, 
-				   <a href="https://github.com/baltejbal/SWATCH">Baltej</a></li>
+				   <a href="https://github.com/baltejbal/SWATCH">Baltej - MCP3008 Pulse</a></li>
 	 </ol>
 	 <ol>AB
 		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
@@ -61,13 +61,13 @@
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (platform?)</a></li>
 		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
 				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration (platform?)</a>, 
-				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - HB100 Microwave</a></li>
+				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - HB100 Microwave (Unipolar or Bipolar stepper?)</a></li>
 	 </ol>
 	 <ol>BBC
-		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartLock">Lucas - MQ-2 Gas</a>, 
-				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR (platform?)</a>, 
+		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartHome">Lucas - MQ-2 Gas</a>, 
+				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR (platform BCM2711 Cortex-A72?)</a>, 
 				   Luca - SHT31-D</li>
-		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Resistive Moisture</a>, 
+		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Moisture Resistive on discussion board, Capacitive on proposal (which is it?)</a>, 
 				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas</a>,
 				   Aiden - PT100 Temperature</li>
 		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad</a>, 
@@ -75,11 +75,11 @@
 	 </ol>
 	 <ol>BCC
 		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O</a>, 
-				   Vikas VCNL4010 Proximity, George - IR Beam</li>
+				   Vikas - VCNL4010 Proximity, George - IR Beam</li>
 	 </ol>
 	 <ol>BC_
 		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W - CJMCU-231 Pedometer</a>, 
-				   Antonio, Gabriel</li>
+				   Antonio - MAX30102 Pulse, Gabriel</li>
 	 </ol>
 	 <ol>B__
 		<li>Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June Lwing PLC</a>, 
