Updated sensor choices

--- a/wk03content.html
+++ b/wk03content.html
@@ -12,7 +12,7 @@
     <li>Here is a suggestion when forming your groups for 2019-2020 based on the information I have received so far:
 	<li>2019-2020 Projects:
 	 <ol>AAA
-		<li>Solar Gazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad - ACS 712 Current</a>, 
+		<li>SolarGazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad - ACS 712 Current</a>, 
 				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin - ZMPT101B Voltage</a>, 
 				   <a href="https://github.com/TheSweeterMan/TBD">Matthew - LM35 Temperature</a></li>
 	 </ol>
@@ -24,13 +24,13 @@
 	 </ol>
 	 <ol>ACC
 		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir - FSR01CE Force</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
-		<li>Restaurant pager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
+		<li>RestaurantPager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
 	 </ol>
 	 <ol>ABC
 		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid</a>, Deval</li>
-		<li>MakerKids: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
-				   <a href="https://github.com/Trung28899/SmartMirror">Trung</a>, Haider</li>
+		<li>MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
+				   <a href="https://github.com/Trung28899/SmartMirror">Trung - HC-SR04 Ultrasonic (stm32f103c8t6 and st-link v2?)</a>, Haider</li>
 	 </ol>
 	 <ol>AABB
 		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP006 IR</a>, 
@@ -39,27 +39,27 @@
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej - MCP3008 Pulse</a></li>
 	 </ol>
 	 <ol>AB
-		<li>Vending machine: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
+		<li>ResistorRecognition: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
 				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29)</a></li>
 	 </ol>
 	 <ol>ABB
-		<li>MakerKids: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge</a>, 
-				   <a href="https://github.com/samfat787/SmartDenProject">Sam</a>, 
-				   <a href="https://github.com/boskyle/SmartDen">Boswell</a></li>
+		<li>MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge</a>, 
+				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED</a>, 
+				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (stm32f103c8t6 and st-link v2)</a></li>
 	 </ol>
 	 <ol>ABB_
-		<li>Smart House Control: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
+		<li>SmartHouseControl: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
 					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - TMP35 Temp (stm32f103c8t6 and st-link v2)</a>, 
 					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian - PT100 Temperature (stm32f103c8t6 and st-link v2)</a>, Slava</li>
 	 </ol>
 	 <ol>BBB
 		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
 				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse</a>, 
-				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung</a></li>
+				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung - 43237-2 Hall Effect</a></li>
 		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - TSL2561 lux (0x49)</a>, 
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (platform?)</a></li>
-		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic</a>, 
+		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic (platform BCM2711 Cortex-A72?)</a>, 
 				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration (platform?)</a>, 
 				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - HB100 Microwave (Unipolar or Bipolar stepper?)</a></li>
 	 </ol>
@@ -74,7 +74,7 @@
 				   <a href="https://github.com/rickyramnath97/gps">Ricky - MTK3339 GPS</a>, Padda - RC522 RFID</li>
 	 </ol>
 	 <ol>BCC
-		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O</a>, 
+		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O - Unipolar or Bipolar stepper?</a>, 
 				   Vikas - VCNL4010 Proximity, George - IR Beam</li>
 	 </ol>
 	 <ol>BC_
