--- a/wk03content.html
+++ b/wk03content.html
@@ -28,7 +28,7 @@
 	 </ol>
 	 <ol>ABC
 		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
-				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid</a>, Deval</li>
+				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid (Broadcom)</a>, Deval</li>
 		<li>MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
 				   <a href="https://github.com/Trung28899/SmartMirror">Trung - HC-SR04 Ultrasonic (stm32f103c8t6 and st-link v2?)</a>, Haider</li>
 	 </ol>
@@ -57,7 +57,7 @@
 				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse</a>, 
 				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung - 43237-2 Hall Effect</a></li>
 		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - TSL2561 lux (0x49)</a>, 
-				   <a href="https://github.com/gseridon/LumiMonitor">Gino - HTU21D-F Temp/Humid</a>, 
+				   <a href="https://github.com/gseridon/LumiMonitor">Gino - Si7021 Temp/Humidity</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (platform?)</a></li>
 		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic (platform BCM2711 Cortex-A72?)</a>, 
 				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration (platform?)</a>, 
@@ -67,7 +67,7 @@
 		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartHome">Lucas - MQ-2 Gas</a>, 
 				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR (platform BCM2711 Cortex-A72?)</a>, 
 				   Luca - SHT31-D</li>
-		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Moisture Resistive on discussion board, Capacitive on proposal (which is it?)</a>, 
+		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Moisture Capacitive</a>, 
 				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas</a>,
 				   Aiden - PT100 Temperature</li>
 		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad</a>, 
