--- a/wk03content.html
+++ b/wk03content.html
@@ -8,81 +8,57 @@
   <p>
    <ul>
  	<li>Project Schedule Due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week3RubricforProjectSchedule.xml">rubric</a>), post a link to your submission on your blog.</li>
- 	<li>Budget Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>.</li>
+ 	<li>Budget Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>. It is helpful to include a column for expected delivery date. It is also helpful to indicate which parts have been obtained versus those that have yet to be ordered.</li>
     <li>Here is a suggestion when forming your groups for 2019-2020 based on the information I have received so far:
 	<li>2019-2020 Projects:
-	 <ol>AAA
-		<li>SolarGazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad - ACS 712 Current</a>, 
+	 <ol>
+		<li>AAA SolarGazebo: <a href="https://github.com/E-Hajj/Ahmad">Ahmad - ACS 712 Current</a>, 
 				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin - ZMPT101B Voltage</a>, 
 				   <a href="https://github.com/TheSweeterMan/TBD">Matthew - LM35 Temperature</a></li>
-	 </ol>
-	 <ol>AAC
-		<li>Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver</a>, 
-				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil Solenoid</a>, Nicolas - Servo</li>
-		<li>PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID</a>, 
-				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (stm32f103c8t6 and st-link v2)</a>, Jonathan - LCD</li>
-	 </ol>
-	 <ol>ACC
-		<li>Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir - FSR01CE Force</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
-		<li>RestaurantPager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
-	 </ol>
-	 <ol>ABC
-		<li>Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
-				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid (Broadcom)</a>, Deval</li>
-		<li>MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
-				   <a href="https://github.com/Trung28899/SmartMirror">Trung - HC-SR04 Ultrasonic (stm32f103c8t6 and st-link v2?)</a>, Haider</li>
-	 </ol>
-	 <ol>AABB
-		<li>SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP006 IR</a>, 
+		<li>AABB SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP006 IR</a>, 
 				   <a href="https://github.com/theoriginalwech/">Shawn - RTC?</a>, 
-				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL345</a>, 
-				   <a href="https://github.com/baltejbal/SWATCH">Baltej - MCP3008 Pulse</a></li>
-	 </ol>
-	 <ol>AB
-		<li>ResistorRecognition: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
-				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29)</a></li>
-	 </ol>
-	 <ol>ABB
-		<li>MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge</a>, 
-				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED</a>, 
-				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (stm32f103c8t6 and st-link v2)</a></li>
-	 </ol>
-	 <ol>ABB_
-		<li>SmartHouseControl: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
-					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - TMP35 Temp (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL345 (Broadcom)</a>, 
+				   <a href="https://github.com/baltejbal/SWATCH">Baltej - MCP3008 Pulse (Broadcom)</a></li>
+		<li>AAC PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID</a>, 
+				   <a href="https://github.com/asperham/Parts-Crib">Colin - VCNL 4010 Proximity (stm32f103c8t6 and st-link v2)</a>, Jonathan - LCD</li>
+		<li>AAC Tennis: <a href="https://github.com/Warris-Sohi/SmartTennisBallMachine">Gurwarris - TB6612FNG Motor Driver</a>, 
+				   <a href="https://github.com/Sahil-Sahil/TennisBall">Sahil Solenoid</a>, Nicolas - Servo</li>
+		<li>AB ResistorRecognition: <a href="https://github.com/BW25/Resistor-value-recognizer">Brendan - Ultrasonic piezo</a>, 
+				   <a href="https://github.com/HusnalK/Resistor-Value-Recoganizer-RVR">Husnal - TSL2591 lux (0x29 Broadcom)</a></li>
+		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge (Broadcom)</a>, 
+				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (Broadcom)</a></li>
+		<li>ABBx SmartHouseControl: <a href="https://github.com/namnguyen20999/InClassPro1">Nam - INA219B Current Sensor</a>,
+					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - MCP9808 Temperature (Broadcom)</a>, 
 					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian - PT100 Temperature (stm32f103c8t6 and st-link v2)</a>, Slava</li>
-	 </ol>
-	 <ol>BBB
-		<li>AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU</a>, 
-				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse</a>, 
-				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung - 43237-2 Hall Effect</a></li>
-		<li>Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - TSL2561 lux (0x49)</a>, 
-				   <a href="https://github.com/gseridon/LumiMonitor">Gino - Si7021 Temp/Humidity</a>, 
-				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (platform?)</a></li>
-		<li>Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - HC-SR04 Ultrasonic (platform BCM2711 Cortex-A72?)</a>, 
-				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - PIR control duration (platform?)</a>, 
-				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - HB100 Microwave (Unipolar or Bipolar stepper?)</a></li>
-	 </ol>
-	 <ol>BBC
-		<li>SmartHouse: <a href="https://github.com/lucasfini/SmartHome">Lucas - MQ-2 Gas</a>, 
-				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR (platform BCM2711 Cortex-A72?)</a>, 
-				   Luca - SHT31-D</li>
-		<li>Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Moisture Capacitive</a>, 
-				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas</a>,
+		<li>ABC Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
+				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid (Broadcom)</a>, Deval</li>
+		<li>ABC MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
+				   <a href="https://github.com/Trung28899/SmartMirror">Trung - HC-SR04 Ultrasonic (stm32f103c8t6 and st-link v2?)</a>, Haider</li>
+		<li>ACC RestaurantPager: <a href="https://github.com/benjaminle9x/Table-Readyy">Hoang - GP735 GPS</a>, Hyoje - Weight, Daniel W - Pressure</li>
+		<li>ACC Tennis: <a href="https://github.com/Abshir-Mohamud/BallSensor">Abshir - FSR01CE Force</a>, Mahendra - LM393 Speed, Ijlal - VCNL4040 Proximity</li>
+		<li>BBB AutomotiveUI: <a href="https://github.com/kevin-lieng/emegensui-automotive-ui">Kevin L - LSM9DS1 IMU (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/qu0cquyen/Automotive_UI">Quyen - DS18B20 Temperature, ADS1015 ADC Pulse (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/SeungMin-Song/Dashboard-Sensors">Seung - 43237-2 Hall Effect (Broadcom)</a></li>
+		<li>BBB Lumi: <a href="https://github.com/simransaini1999/Lumi-Monitor">Harsimran - TSL2561 lux (0x49 Broadcom)</a>, 
+				   <a href="https://github.com/gseridon/LumiMonitor">Gino - Si7021 Temp/Humidity (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (Broadcom)</a></li>
+		<li>BBB Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - PCF8574 LCD (Broadcom)</a>, 
+				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - DRV8825 Bipolar Stepper Driver (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - EK1254x5 IR (Broadcom)</a></li>
+		<li>BBC Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Moisture Capacitive (Broadcom)</a>, 
+				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas (Broadcom)</a>,
 				   Aiden - PT100 Temperature</li>
-		<li>PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad</a>, 
-				   <a href="https://github.com/rickyramnath97/gps">Ricky - MTK3339 GPS</a>, Padda - RC522 RFID</li>
-	 </ol>
-	 <ol>BCC
-		<li>Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O - Unipolar or Bipolar stepper?</a>, 
+		<li>BBC PartsCrib: <a href="https://github.com/c3ko/SecondFactorKeypad">Mohamed - COM-14662 Keypad (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/rickyramnath97/gps">Ricky - MTK3339 GPS (Broadcom)</a>, Padda - RC522 RFID</li>
+		<li>BBC SmartHouse: <a href="https://github.com/lucasfini/SmartHome">Lucas - MQ-2 Gas (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/getLiauba/SmartHomeMonitor">Andrew - HC-SR501 PIR (Broadcom)</a>, 
+				   Luca - SHT31-D</li>
+		<li>BCC Parking: <a href="https://github.com/InfiniteMaximum/SmartParkingLotSystem">Daniel O - PCA9685 Servo Driver (Broadcom)</a>, 
 				   Vikas - VCNL4010 Proximity, George - IR Beam</li>
-	 </ol>
-	 <ol>BC_
-		<li>SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W - CJMCU-231 Pedometer</a>, 
+		<li>BCx SmartWatch: <a href="https://github.com/kwitaszek/SmartWatch">Kevin W - KX023 Accelerometer (as per George)</a>, 
 				   Antonio - MAX30102 Pulse, Gabriel</li>
-	 </ol>
-	 <ol>B__
-		<li>Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June Lwing PLC</a>, 
+		<li>Bxx Solar: <a href="https://github.com/junedacaya/L-WingSolarPanelInteractiveDisplay">June Lwing PLC</a>, 
 				   Vidyaanand, Nicholas</li>
 	 </ol>
 	 <ul>
