--- a/wk03content.html
+++ b/wk03content.html
@@ -16,7 +16,7 @@
 				   <a href="https://github.com/RaminKurkeice/hello-world">Ramin - ZMPT101B Voltage</a>, 
 				   <a href="https://github.com/TheSweeterMan/TBD">Matthew - LM35 Temperature</a></li>
 		<li>AABB SmartWatch: <a href="https://github.com/Jerrehj/Smart-Watch-Temperature-Sensor">Jerreh - TMP006 IR</a>, 
-				   <a href="https://github.com/theoriginalwech/">Shawn - RTC?</a>, 
+				   <a href="https://github.com/theoriginalwech/">Shawn - RTC (Pi Zero W)</a>, 
 				   <a href="https://github.com/breezydust/SmartWatch">Thomas - ADXL345 (Broadcom)</a>, 
 				   <a href="https://github.com/baltejbal/SWATCH">Baltej - MCP3008 Pulse (Broadcom)</a></li>
 		<li>AAC PartsCrib: <a href="https://github.com/RDinh/NFCRFID">Robert - PN532 RFID</a>, 
