--- a/wk03content.html
+++ b/wk03content.html
@@ -28,7 +28,7 @@
 		<li>ABB MakerKidsSmartDen: <a href="https://github.com/HoangPhuc1999/Bobby">Bobby - SN754410 Quad Half H-Bridge (Broadcom)</a>, 
 				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED (stm32f103c8t6 and st-link v2)</a>, 
 				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (Broadcom)</a></li>
-		<li>ABBx SmartHouseControl: <a href="https://github.com/namnguyen20999/.github.io-SmartHouse">Nam - INA219B Current Sensor</a>,
+		<li>ABBx SmartHouseControl: <a href="https://github.com/namnguyen20999/.github.io-SmartHouse">Nam - VEML7700 Lux (stm32f103c8t6 and st-link v2)</a>,
 					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - MCP9808 Temperature (Broadcom)</a>, 
 					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian - PT100 Temperature (stm32f103c8t6 and st-link v2)</a>, Slava</li>
 		<li>ABC Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
@@ -44,7 +44,7 @@
 				   <a href="https://github.com/gseridon/LumiMonitor">Gino - Si7021 Temp/Humidity (stm32f103c8t6 and st-link v2)</a>, 
 				   <a href="https://github.com/kylev1999/LumiMonitor">Kyle - PIR control proximity (Broadcom)</a></li>
 		<li>BBB Parking: <a href="https://github.com/SainaKapoor/ParkingEaze">Saina - PCF8574 LCD (Broadcom)</a>, 
-				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - DRV8825 Bipolar Stepper Driver (stm32f103c8t6 and st-link v2)</a>, 
+				   <a href="https://github.com/NavkiranKaur/ParkingEaze">Navkiran - DRV8825 Bipolar Stepper Driver (Broadcom)</a>, 
 				   <a href="https://github.com/HarleenSaini19/parkingEaze">Harleen - EK1254x5 IR (Broadcom)</a></li>
 		<li>BBC Greenhouse: <a href="https://github.com/DBOO92/317Hardware">Daniel B - Moisture Capacitive (Broadcom)</a>, 
 				   <a href="https://github.com/McAdieCENG/CENGProject">Ryan - BME-680 Gas (Broadcom)</a>,
