--- a/wk03content.html
+++ b/wk03content.html
@@ -29,8 +29,8 @@
 				   <a href="https://github.com/samfat787/SmartDenProject">Sam - YSL-R596CR3G4B5C-C10 RGB LED (stm32f103c8t6 and st-link v2)</a>, 
 				   <a href="https://github.com/boskyle/SmartDen">Boswell - Keyes Microphone Sound Detection Sensor Module (Broadcom)</a></li>
 		<li>ABBx SmartHouseControl: <a href="https://github.com/namnguyen20999/.github.io-SmartHouse">Nam - VEML7700 Lux (stm32f103c8t6 and st-link v2)</a>,
-					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - MCP9808 Temperature (Broadcom)</a>, 
-					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian - PT100 Temperature (stm32f103c8t6 and st-link v2)</a>, Slava</li>
+					<a href="https://github.com/AdrianD-B/SmartWatch">Adrian - PT100 Temperature (stm32f103c8t6 and st-link v2)</a>, 
+					<a href="https://github.com/diepbaoquy97/SmartHome">Bao - MCP9808 Temperature (Broadcom)</a>, Slava</li>
 		<li>ABC Lumi: <a href="https://github.com/Abdirashid-Yusuf/Lumi-monitor">Abdirashid - SPH0645LM4H Mic</a>, 
 				   <a href="https://github.com/Manshur7/Capstone-Project">Manshur - DHT22 Temp/Humid (Broadcom)</a>, Deval</li>
 		<li>ABC MakerKidsSmartMirror: <a href="https://github.com/minhnguyen999/hello-world">Minh - ISD1820 Recorder</a>, 
