--- a/wk05content.html
+++ b/wk05content.html
@@ -9,7 +9,7 @@
    <ul>
     <li>Proof of purchase due by posting on your blog (be sure to not post any sensitive information) - see week 1 regarding index.md.</li>
 	<li>N.B. Regardless of project, prototypes are not to be left powered unattended.</li>
-	<li>Raspbian OS, STM32, and fritzing session.</li>
+	<li>Raspbian OS, STM32, and fritzing <a href="http://simonmonk.org/fritzing-for-inventors/">(Textbook)</a> session.</li>
 	<li>To set up your Broadcom development platform's SD card be sure to visit <a href="https://github.com/six0four/StudentSenseHat/blob/master/README.md#student-raspberry-pi-image-creation-and-test-code">image creation</a> plus Paul Moggach's technical notes.</li> 
 	<li>It turns outs that the newest version of Rasbian has realvnc-vnc-server installed by default which conflicts with xrdp. Instead of installing xrdp on your development platform you can install <a href="https://www.realvnc.com/download/viewer/">VNC Viewer</a> on your desktop to connect instead of using Remote Desktop Connection. The boot options still need to be set along with ensuring VNC (and I2C) is enabled via Menu > Preferences > Raspberry Pi Configuration > Interfaces and such an image is in the dropbox as before. Please let me know if you have had success purging realvnc-vnc-server and installing then using xrdp.</li>
  	<li>Take a look at <a href="https://github.com/six0four/ceng317/tree/master/rubrics/ProgressReports.txt">update guidelines</a>.</li> 
